--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="flexbox">
                         <div class="card">
                             <figure>
-                                <img src="img/001.jpg">
+                                <img src="001.jpg">
                             </figure>
                             <div class="cardtext">
                                 <h2>PRODUCT</h2>
@@ -51,7 +51,7 @@
                         </div>
                         <div class="card">
                             <figure>
-                                <img src="img/002.jpg">
+                                <img src="002.jpg">
                             </figure>
                             <div class="cardtext">
                                 <h2>MAKER</h2>
@@ -82,13 +82,13 @@
                     <div class="bar">
                         <ul class="inline">
                             <li>
-                                <a href=""><img class="icon" src="img/icon/Instagram.png"></a>
+                                <a href=""><img class="icon" src="Instagram.png"></a>
                             </li>
                             <li>
-                                <a href=""><img class="icon" src="img/icon/Facebook.png"></a>
+                                <a href=""><img class="icon" src="icon/Facebook.png"></a>
                             </li>
                             <li>
-                                <a href=""><img class="icon" src="img/icon/Youtube.png"></a>
+                                <a href=""><img class="icon" src="Youtube.png"></a>
                             </li>
                         </ul>
                     </div>
