--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                     <div class="bar">
                         <ul class="inline">
                             <li>
-                                <a href=""><img class="icon" src="Instagram.png"></a>
+                                <a href=""><img class="icon" src="Instagram.png" alt="instagram"></a>
                             </li>
                             <li>
-                                <a href=""><img class="icon" src="icon/Facebook.png"></a>
+                                <a href=""><img class="icon" src="Facebook.png" alt="facebook"></a>
                             </li>
                             <li>
-                                <a href=""><img class="icon" src="Youtube.png"></a>
+                                <a href=""><img class="icon" src="Youtube.png" alt="youtube"></a>
                             </li>
                         </ul>
                     </div>
