--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                     <div class="bar">
                         <ul class="inline">
                             <li>
-                                <a href=""><img class="icon" src="Instagram.png" alt="instagram"></a>
+                                <a href="https://www.instagram.com/shunartesan/"><img class="icon" src="instagram.png" alt="instagram"></a>
                             </li>
                             <li>
-                                <a href=""><img class="icon" src="Facebook.png" alt="facebook"></a>
+                                <a href="https://www.facebook.com/shun.yonemura.9/"><img class="icon" src="facebook.png" alt="facebook"></a>
                             </li>
                             <li>
-                                <a href=""><img class="icon" src="Youtube.png" alt="youtube"></a>
+                                <a href="https://www.youtube.com/channel/UCtb8GCc8_8WRlU308ebKlzw"><img class="icon" src="youtube.png" alt="youtube"></a>
                             </li>
                         </ul>
                     </div>
