--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                     Encountered Galician music in 2006,
                                     and took a trip to Galicia for the first time in 2010.
                                     In 2014, met Paparolo, who made the ocarina Carlos Núñez plays. 
-                                    This meeting maked the begging of my exploration of the structure and interpretation of the ocarina, 
+                                    This meeting maked the beginning of my exploration of the structure and interpretation of the ocarina, 
                                     with his guidance and support. 
                                     Around the same time, 
                                     investigated the history, culture and music of Galicia during graduate studies. 
