--- a/maker.html
+++ b/maker.html
@@ -20,7 +20,7 @@
                         <h3>Shun Yonemura</h3>
                         <p>
                             Born in Kanagawa in 1989 and grew up in Tokyo.
-                            I lerned the violin in childhood, 
+                            I learned the violin in childhood, 
                             the harmonica and the tin whitsle in early teens.
                             I knew about the ocarina at that time, 
                             but it did not particularly inerest me.
