--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                                     Encountered Galician music in 2006,
                                     and took a trip to Galicia for the first time in 2010.
                                     In 2014, met Paparolo, who made the ocarina Carlos Núñez plays. 
-                                    This meeting maked the beginning of my exploration of the structure and interpretation of the ocarina, 
+                                    This meeting maked the begging of my exploration of the structure and interpretation of the ocarina, 
                                     with his guidance and support. 
                                     Around the same time, 
                                     investigated the history, culture and music of Galicia during graduate studies. 
                                 </P>
                                 <p>
-                                    Since 2024, has been progucing ocarinas, with
+                                    Since 2024, has been producing ocarinas, with
                                     demonstration performances are accompanied 
                                     by self-managed filming and recording.
                                 </p>
@@ -82,13 +82,13 @@
                     <div class="bar">
                         <ul class="inline">
                             <li>
-                                <a href="https://www.instagram.com/shunartesan/"><img class="icon" src="instagram.png" alt="instagram"></a>
+                                <a href="https://www.instagram.com/shunartesan"><img class="icon" src="instagram.png"></a>
                             </li>
                             <li>
-                                <a href="https://www.facebook.com/shun.yonemura.9/"><img class="icon" src="facebook.png" alt="facebook"></a>
+                                <a href="https://www.facebook.com/shun.yonemura.9/"><img class="icon" src="facebook.png"></a>
                             </li>
                             <li>
-                                <a href="https://www.youtube.com/channel/UCtb8GCc8_8WRlU308ebKlzw"><img class="icon" src="youtube.png" alt="youtube"></a>
+                                <a href="https://www.youtube.com/channel/UCtb8GCc8_8WRlU308ebKlzw"><img class="icon" src="youtube.png"></a>
                             </li>
                         </ul>
                     </div>
