--- a/product.html
+++ b/product.html
@@ -70,7 +70,9 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                            </div>
+                                <p>
+                                    <img class="fingering" src="001.png">
+                                </p>
                             <div>
                                 <h3>BASIC: 11 holes, 12 notes</h3>
                                 <p>
@@ -89,7 +91,7 @@
                                         <tr>
                                             <td class="left">Garklein</td>
                                             <th>D</th>
-                                            <td>C#5</td>
+                                            <td>C#6</td>
                                             <td>G7</td>
                                         </tr>
                                         <tr>
