--- a/maker.html
+++ b/maker.html
@@ -55,9 +55,9 @@
                         <h2>DEAR EVERY WHITSLER</h2>
                         <p>
                             Not only ocarina, I have experience playing the various wind instruments, 
-                            such as gaita galega, requinta, recorder, hermonica, tin whistle, low whistle, Irlish flute, and so on.
+                            such as gaita galega, requinta, recorder, harmonica, tin whistle, low whistle, Irlish flute, and so on.
                             I really admire the musicianship and technical skill of players of these instruments, 
-                            and turly believe that musicians with such skills would innovate the performance of the ocarina.
+                            and truly believe that musicians with such skills would innovate the performance of the ocarina.
                         </p>
                         <p>
                             The aim is to create high-quality ocarina that are far from toys or something you'd find in a video game, 
