--- a/product.html
+++ b/product.html
@@ -73,6 +73,7 @@
                                 <p>
                                     <img class="fingering" src="001.png">
                                 </p>
+                            </div>    
                             <div>
                                 <h3>BASIC: 11 holes, 12 notes</h3>
                                 <p>
