--- a/maker.html
+++ b/maker.html
@@ -44,9 +44,9 @@
                         </p>
                         <p>
                             I returened to Tokyo in the end of 2019, 
-                            and sterted the pottery making in 2020.
+                            and started the pottery making in 2020.
                             I worked at a manufacturer of western concert flute from 2021 to 2023, 
-                            then sterted to produce my own ocarina in 2024.
+                            then started to produce my own ocarina in 2024.
                         </p>    
                     </div>
                 </section>
@@ -54,15 +54,15 @@
                     <div class="box">
                         <h2>DEAR EVERY WHITSLER</h2>
                         <p>
-                            Not only ocarina, I have experience playing the various wind instruments, 
-                            such as gaita galega, requinta, recorder, harmonica, tin whistle, low whistle, Irlish flute, and so on.
-                            I really admire the musicianship and technical skill of players of these instruments, 
-                            and truly believe that musicians with such skills would innovate the performance of the ocarina.
+                            I don't just play the ocarina—I also have experience with a variety of wind instruments, 
+                            including the gaita galega, requinta, recorder, harmonica, tin whistle, low whistle, Irlish flute, and more.
+                            I have great admiration for the musicianship and technical mastery of those who play these instruments. 
+                            I genuinely believe that artists with such skills can bring fresh inspiration and innovation to ocarina perfprmance.
                         </p>
                         <p>
-                            The aim is to create high-quality ocarina that are far from toys or something you'd find in a video game, 
-                            but rather instruments that can satisfy even the most discerning players. 
-                            It would be an honor for these musicians to give it a try.
+                            My goal is to craft ocarinas that are far more than toys or something you'd find in a video game, 
+                            they are serious musical instruments, designed to meet the standards of even the most discerning players. 
+                            It would be a true honor for these musicians to try them and discover their potential.
                         </p>
                     </div> 
                 </section>
