--- a/maker.html
+++ b/maker.html
@@ -52,7 +52,7 @@
                 </section>
                 <section id="sec2">
                     <div class="box">
-                        <h2>DEAR EVERY WHITSLER</h2>
+                        <h2>TO ALL WIND PLAYERS</h2>
                         <p>
                             I don't just play the ocarina—I also have experience with a variety of wind instruments, 
                             including the gaita galega, requinta, recorder, harmonica, tin whistle, low whistle, Irlish flute, and more.
