--- a/index.html
+++ b/index.html
@@ -14,18 +14,23 @@
                         Handmade ocarina for the traditional music of Galicia and Ireland.
                     </p>
                 </header>
+                <div class="langselect">
+                    <a href="./index.html"><b><u>English</u></b></a> |
+                    <a href="./es/index.html">español</a> |
+                    <a href="./jp/index.html">日本語</a>
+                </div>
                 <section id="sec1">
                     <div class="flexbox">
                         <div class="card">
                             <figure>
-                                <img src="001.jpg">
+                                <img src="./img/001.jpg">
                             </figure>
                             <div class="cardtext">
                                 <h2>PRODUCT</h2>
                                 <h3>One extra note in the upper range</h3>
                                 <p>
                                     The structure is designed inspiring by a Spanish artist, 
-                                    Mo. Manuel Barreiro (Paparolo).  
+                                    Mo. Manuel Barreiro "Paparolo".  
                                     A single-chamber and a doble-hole for the right pinky. 
                                     It enables rythmic playing with chromatic and also diatonic scales, 
                                     for Muiñeira, Xota, Reel and Jig.  
@@ -51,7 +56,7 @@
                         </div>
                         <div class="card">
                             <figure>
-                                <img src="002.jpg">
+                                <img src="./img/002.jpg">
                             </figure>
                             <div class="cardtext">
                                 <h2>MAKER</h2>
@@ -61,7 +66,7 @@
                                     Encountered Galician music in 2006,
                                     and took a trip to Galicia for the first time in 2010.
                                     In 2014, met Paparolo, who made the ocarina Carlos Núñez plays. 
-                                    This meeting maked the beginning of my exploration of the structure and interpretation of the ocarina, 
+                                    This meeting made the beginning of my exploration of the structure and interpretation of the ocarina, 
                                     with his guidance and support. 
                                     Around the same time, 
                                     investigated the history, culture and music of Galicia during graduate studies. 
@@ -82,13 +87,13 @@
                     <div class="bar">
                         <ul class="inline">
                             <li>
-                                <a href="https://www.instagram.com/shunartesan"><img class="icon" src="instagram.png"></a>
+                                <a href="https://www.instagram.com/shunartesan"><img class="icon" src="./img/instagram.png"></a>
                             </li>
                             <li>
-                                <a href="https://www.facebook.com/shun.yonemura.9/"><img class="icon" src="facebook.png"></a>
+                                <a href="https://www.facebook.com/shun.yonemura.9/"><img class="icon" src="./img/facebook.png"></a>
                             </li>
                             <li>
-                                <a href="https://www.youtube.com/channel/UCtb8GCc8_8WRlU308ebKlzw"><img class="icon" src="youtube.png"></a>
+                                <a href="https://www.youtube.com/channel/UCtb8GCc8_8WRlU308ebKlzw"><img class="icon" src="./img/youtube.png"></a>
                             </li>
                         </ul>
                     </div>
