--- a/maker.html
+++ b/maker.html
@@ -14,6 +14,14 @@
                         Handmade ocarina for the traditional music of Galicia and Ireland.
                     </p>
                 </header>
+                <div class="langselect">
+                    <a href="./index.html"><b><u>English</u></b></a> |
+                    <a href="./es/maker.html">español</a>
+                    <!--
+                     |
+                    <a href="./jp/maker.html">日本語</a>
+                    -->
+                </div>
                 <section id="sec1">
                     <div class="box">
                         <h2>MAKER</h2>
@@ -57,8 +65,7 @@
                             I don't just play the ocarina—I also have experience with a variety of wind instruments, 
                             including the gaita galega, requinta, recorder, harmonica, tin whistle, low whistle, Irlish flute, and more.
                             I have great admiration for the musicianship and technical mastery of those who play these instruments. 
-                            I genuinely believe that artists with such skills can bring fresh inspiration and innovation to ocarina perfprmance.
-                        </p>
+                            I genuinely believe that artists with such skills can bring fresh inspiration and innovation to ocarina performance.
                         <p>
                             My goal is to craft ocarinas that are far more than toys or something you'd find in a video game, 
                             they are serious musical instruments, designed to meet the standards of even the most discerning players. 
