--- a/product.html
+++ b/product.html
@@ -11,10 +11,18 @@
                 <header>
                     <a href="index.html"><h1>SHUNARTESÁN</h1></a>
                     <p>
-                        Handmade ocarina for the traditional music of Galicia and Ireland.
+                        Handmade ocarinas for the traditional music of Galicia and Ireland.
                     </p>
                 </header>
-                <section>
+                <div class="langselect">
+                    <a href="./product.html"><b><u>English</u></b></a> |
+                    <a href="./es/product.html">español</a>
+                    <!--
+                     |
+                    <a href="./jp/product.html">日本語</a>
+                    -->
+                </div>
+                <section id="sec1">
                     <div class="box">
                         <h2>PRODUCT</h2>
                         <p>
@@ -34,8 +42,18 @@
                         <p>
                             The nomenclature is based on the standard by Paparolo 
                             and the classificaton of the recorder.
-                        </p> 
-                        <div class="flexbox">
+                        </p>
+                        <p>
+                            All products are manufactured in Japan, and are primarily intended for sale outside of Japan. 
+                            <b>
+                            Based on the Japanese yen prices shown below, actual selling prices may be slightly adjusted typically downward depending on the exchange rate.
+                            </b>
+                        </p>
+                        <p>
+                            Contact me on 
+                            <u><b><a href="https://www.etsy.com/jp/shop/shunartesan">Etsy</a></b></u>.
+                        </p>
+                <div class="flexbox">
                             <div>
                                 <h3>ORIGINAL: 11 holes, 13 notes</h3>
                                 <p>
@@ -51,27 +69,25 @@
                                 <table>
                                     <tbody>
                                         <tr>
-                                            <td class="left"></td>
-                                            <td></td>
-                                            <td>Lowest</td>
-                                            <td>Highest</td>
+                                            <th colspan="2">Tonality</th>
+                                            <th>Range</th>
+                                            <th>price</th>
                                         </tr>
                                         <tr>
-                                            <td class="left">Soprano</td>
-                                            <th>D</th>
-                                            <td>C#5</td>
-                                            <td>A6</td>    
+                                            <td class="right">Soprano</td>
+                                            <td class="leftbold">D</td>
+                                            <td class="tt">C#5–A 6</td>
+                                            <td rowspan="2">JPY 26,000–28,000</td>
                                         </tr>
                                         <tr>
-                                            <td class="left">Soprano</td>
-                                            <th>C</th>
-                                            <td>B4</td>
-                                            <td>G6</td>    
+                                            <td class="right">Soprano</td>
+                                            <td class="leftbold">C</td>
+                                            <td class="tt" rawspan="2">B 4–G 6</td>
                                         </tr>
                                     </tbody>
                                 </table>
                                 <p>
-                                    <img class="fingering" src="001.png">
+                                    <img class="fingering" src="./img/001.png">
                                 </p>
                             </div>    
                             <div>
@@ -82,124 +98,109 @@
                                     you may have to wait anywhere from one to several months, 
                                     or even longer depending on the situation.
                                 </p>
-                                <table>
+                                        <table>
                                     <tbody>
                                         <tr>
-                                            <td class="left"></td>
-                                            <td></td>
-                                            <td>Lowest</td>
-                                            <td>Highest</td>
-                                        <tr>
-                                            <td class="left">Garklein</td>
-                                            <th>D</th>
-                                            <td>C#6</td>
-                                            <td>G7</td>
+                                            <th colspan="2">Tonality</th>
+                                            <th>Range</th>
+                                            <th>Price</th>
                                         </tr>
                                         <tr>
-                                            <td class="left">Garklein</td>
-                                            <th>C</th>
-                                            <td>B5</td>
-                                            <td>F7</td>    
+                                            <td class="right">Garklein</td>
+                                            <td class="leftbold">D</td>
+                                            <td class="tt">C#6–G 7</td>
+                                            <td rowspan="3">JPY 18,000–20,000</td>
                                         </tr>
                                         <tr>
-                                            <td class="left">Garklein</td>
-                                            <th>Bb</th>
-                                            <td>A5</td>
-                                            <td>Eb7</td>    
-                                        </tr>
-                                        <tr><td class="left"></td></tr>
-                                        <tr>
-                                            <td class="left">Sopranino</td>
-                                            <th>A</th>
-                                            <td>G#5</td>
-                                            <td>D7</td>    
+                                            <td class="right">Garklein</td>
+                                            <td class="leftbold">C</td>
+                                            <td class="tt">B 5–F 7</td>
                                         </tr>
                                         <tr>
-                                            <td class="left">Sopranino</td>
-                                            <th>Ab</th>
-                                            <td>G5</td>
-                                            <td>Db7</td>    
+                                            <td class="right">Garklein</td>
+                                            <td class="leftbold">Bb</td>
+                                            <td class="tt">A 5–Eb7</td>
                                         </tr>
                                         <tr>
-                                            <td class="left">Sopranino</td>
-                                            <th>G</th>
-                                            <td>F5</td>
-                                            <td>C7</td>    
+                                            <td class="right">Sopranino</td>
+                                            <td class="leftbold">A</td>
+                                            <td class="tt">G#5–D 7</td>
+                                            <td rowspan="4">JPY 21,000–24,000</td>
                                         </tr>
                                         <tr>
-                                            <td class="left">Sopranino</td>
-                                            <th>F</th>
-                                            <td>E5</td>
-                                            <td>Bb6</td>    
-                                        </tr>
-                                        <tr><td class="left"></td></tr>
-                                        <tr>
-                                            <td class="left">Soprano</td>
-                                            <th>Eb</th>
-                                            <td>D5</td>
-                                            <td>Ab6</td>    
+                                            <td class="right">Sopranino</td>
+                                            <td class="leftbold">Ab</td>
+                                            <td class="tt">G 5–Db7</td>
                                         </tr>
                                         <tr>
-                                            <td class="left">Soprano</td>
-                                            <th>D</th>
-                                            <td>C#5</td>
-                                            <td>G6</td>    
+                                            <td class="right">Sopranino</td>
+                                            <td class="leftbold">G</td>
+                                            <td class="tt">F 5–C 7</td>
                                         </tr>
                                         <tr>
-                                            <td class="left">Soprano</td>
-                                            <th>C</th>
-                                            <td>B4</td>
-                                            <td>F6</td>    
+                                            <td class="right">Sopranino</td>
+                                            <td class="leftbold">F</td>
+                                            <td class="tt">E 5–Bb6</td>
                                         </tr>
                                         <tr>
-                                            <td class="left">Soprano</td>
-                                            <th>Bb</th>
-                                            <td>A4</td>
-                                            <td>Eb6</td>    
-                                        </tr>
-                                        <tr><td class="left"></td></tr>
-                                        <tr>
-                                            <td class="left">Alto</td>
-                                            <th>A</th>
-                                            <td>G#4</td>
-                                            <td>D6</td>    
+                                            <td class="right">Soprano</td>
+                                            <td class="leftbold">Eb</td>
+                                            <td class="tt">D 5–Ab6</td>
+                                            <td rowspan="4">JPY 25,000–28,000</td>
                                         </tr>
                                         <tr>
-                                            <td class="left">Alto</td>
-                                            <th>Ab</th>
-                                            <td>G4</td>
-                                            <td>D6</td>    
+                                            <td class="right">Soprano</td>
+                                            <td class="leftbold"h>D</t>
+                                            <td class="tt">C#5–G 6</td>
                                         </tr>
                                         <tr>
-                                            <td class="left">Alto</td>
-                                            <th>G</th>
-                                            <td>F#4</td>
-                                            <td>C6</td>    
+                                            <td class="right">Soprano</td>
+                                            <td class="leftbold">C</td>
+                                            <td class="tt">B 4–F 6</td>
                                         </tr>
                                         <tr>
-                                            <td class="left">Alto</td>
-                                            <th>F</th>
-                                            <td>E4</td>
-                                            <td>Bb5</td>    
-                                        </tr>
-                                        <tr><td class="left"></td></tr>
-                                        <tr>
-                                            <td class="left">Tenor</td>
-                                            <th>Eb</th>
-                                            <td>D4</td>
-                                            <td>Ab5</td>    
+                                            <td class="right">Soprano</td>
+                                            <td class="leftbold">Bb</td>
+                                            <td class="tt">A 4–Eb6</td>
                                         </tr>
                                         <tr>
-                                            <td class="left">Tenor</td>
-                                            <th>D</th>
-                                            <td>C#4</td>
-                                            <td>G5</td>    
+                                            <td class="right">Alto</td>
+                                            <td class="leftbold">A</td>
+                                            <td class="tt">G#4–D 6</td>
+                                            <td rowspan="4">JPY 30,000–34,000</td>
                                         </tr>
                                         <tr>
-                                            <td class="left">Tenor</td>
-                                            <th>C</th>
-                                            <td>B3</td>
-                                            <td>F5</td>    
+                                            <td class="right">Alto</td>
+                                            <td class="leftbold">Ab</td>
+                                            <td class="tt">G 4–D 6</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="right">Alto</td>
+                                            <td class="leftbold">G</td>
+                                            <td class="tt">F#4–C 6</td>
+                                        <tr>
+                                            <td class="right">Alto</td>
+                                            <td class="leftbold">F</td>
+                                            <td class="tt">E 4–Bb5</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="right">Tenor</td>
+                                            <td class="leftbold">Eb</td>
+                                            <td class="tt">D 4–Ab5</td>
+                                            <td rowspan="3">To be determined</td>
+                                            <!--
+                                            <td rowspan="3">JPY 40,000–46,000</td>
+                                            -->
+                                        </tr>
+                                        <tr>
+                                            <td class="right">Tenor</td>
+                                            <td class="leftbold">D</td>
+                                            <td class="tt">C#4–G 5</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="right">Tenor</td>
+                                            <td class="leftbold">C</td>
+                                            <td class="tt">B 3–F 5</td>
                                         </tr>
                                     </tbody>
                                 </table>
